--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
     <div class="content">
         <h1>OneSticker<br>Always Synced<br>Every Platform, Every Device.</h1>
-        <p>*OneSticker is a note-taking app that seamlessly syncs your sticky notes across all platforms,, is currently available for free for a limited time.</p>
+        <p>*OneSticker is a sticky note app that seamlessly syncs your sticky notes across all platforms,, is currently available for free for a limited time.</p>
         <div class="buttons">
             <a class="get-app">Get App  ->  </a>
             <a href="https://github.com/fengyiqicoder/OneStickerRelease/releases/download/1.0.0/OneSticker-1.0.0-universal.dmg" class="button">MacOS App</a>
