Change to chinese

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OneSticker</title>
-    <meta name="description" content="OneSticker is a versatile note-taking app that syncs across all devices. Available for MacOS, Windows, iOS, Android, and as a Web App.">
+    <meta name="description" content="OneSticker是一款多功能记事应用，可在所有设备间同步。支持MacOS、Windows、iOS、Android以及作为Web应用程序使用。">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -66,8 +66,8 @@
         <img src="background.jpg" alt="Background">
     </div>
     <div class="content">
-        <h1>OneSticker<br>Always Synced<br>Every Platform, Every Device.</h1>
-        <p>*OneSticker is a sticky note app that seamlessly syncs your sticky notes across all platforms,, is currently available for free for a limited time.</p>
+        <h1>OneSticker<br>实时同步的<br>全平台便签App</h1>
+        <p>*OneSticker是一款便签应用，能够无缝同步您在所有平台上的便签，目前限时免费中。</p>
         <div class="buttons">
             <a class="get-app">Get App  ->  </a>
             <a href="https://github.com/fengyiqicoder/OneStickerRelease/releases/download/1.0.0/OneSticker-1.0.0-universal.dmg" class="button">MacOS App</a>
