--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <img src="background.jpg" alt="Background">
     </div>
     <div class="content">
-        <h1>OneSticker<br>实时同步的<br>全平台便签App</h1>
+        <h1>OneSticker<br>全平台实时同步便签App</h1>
         <p>*OneSticker是一款便签应用，能够无缝同步您在所有平台上的便签，目前限时免费中。</p>
         <div class="buttons">
             <a class="get-app">Get App  ->  </a>
