change download app

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h1>OneSticker<br>全平台实时同步便签App</h1>
         <p>*OneSticker是一款便签应用，能够无缝同步您在所有平台上的便签，目前限时免费中。</p>
         <div class="buttons">
-            <a class="get-app">Get App  ->  </a>
+            <a class="get-app">下载App  ->  </a>
             <a href="https://github.com/fengyiqicoder/OneStickerRelease/releases/download/1.0.0/OneSticker-1.0.0-universal.dmg" class="button">MacOS App</a>
             <a href="https://github.com/fengyiqicoder/OneStickerRelease/releases/download/1.0.0/OneSticker.1.0.0.exe" class="button">Windows App</a>
             <a href="https://testflight.apple.com/join/67uL7LXO" class="button" target="_blank">iOS App (TestFlight)</a>
