--- a/index.html
+++ b/index.html
@@ -59,6 +59,20 @@
             font-size: 22px;
             font-weight: 700; /* Bold */
         }
+
+        .info-button {
+            display: inline-flesx;
+            align-items: center;
+            justify-content: center;
+            color: black;
+            font-size: 20px;
+            font-weight: bold;
+            text-decoration: none;
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            z-index: 2;
+        }
     </style>
 </head>
 <body>
@@ -66,6 +80,13 @@
         <img src="background.jpg" alt="Background">
     </div>
     <div class="content">
+        <a href="https://bento.me/edmundfeng" class="info-button" target="_blank" title="More Information">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-info">
+                <circle cx="12" cy="12" r="10"></circle>
+                <line x1="12" y1="16" x2="12" y2="12"></line>
+                <line x1="12" y1="8" x2="12.01" y2="8"></line>
+            </svg>
+        </a>
         <h1>OneSticker<br>全平台实时同步便签App</h1>
         <p>*OneSticker是一款便签应用，能够无缝同步您在所有平台上的便签，目前限时免费中。</p>
         <div class="buttons">
